fixed mobile menu background colors when toggling dark mode.

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,10 +43,17 @@ body {
     width: 100%;
 }
 header {
+    background: inherit;
     margin-bottom: 50px;
     max-width: 667px;
     margin-right: auto;
     margin-left: auto;
+}
+head {
+    background-color: inherit;
+}
+.mobile-display {
+    background-color: inherit !important;
 }
 main {
     margin: 0 auto 0 auto;
@@ -54,6 +61,7 @@ main {
     padding: 0 20px;
 }
 .menu {
+    background-color: inherit;
     list-style-type: none;
 }
 .menu a {
@@ -105,7 +113,7 @@ main > section {
 #checkbox:checked + .label .ball {
     transform: translate(23.5px);
     border: 1.5px solid #bdbddd;
-    background-color: #292C35
+    /* background-color: #292C35 */
 }
 
 /************* Welcome/About Me ************/
@@ -364,11 +372,11 @@ footer {
         position: fixed;
         inset: -10px 25% 0 0;
         background-color: #fcfcfc;
-        opacity: 0.95;
+        height: 100vh;
+        opacity: 0.97;
         z-index: 1;
         display: flex;
         flex-direction: column;
-        /* justify-content: center; */
         align-items: center;
         gap: 16px;
         padding: 0;
@@ -381,14 +389,14 @@ footer {
         /* position: absolute; */
         bottom: 0px;
         right: 15px;
-        fill: #292C35;
+        fill: #8b8b8b;
         width: 1em;
         height: 1em;
         display: inline-block;
         align-self: end;
         margin-top: 8px;
         margin-right: 8px;
-        margin-bottom: 288px;
+        margin-bottom: 200px;
         font-size: 4rem;
         transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     }
